--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'commons-io:commons-io:2.18.0'
     implementation 'org.apache.commons:commons-lang3:3.17.0'
     implementation 'org.apache.commons:commons-collections4:4.5.0-M2'
+    implementation 'com.google.guava:guava:33.3.1-jre'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -20,4 +21,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "26g" // maximum heap size
+
 }
